--- a/index.html
+++ b/index.html
@@ -5,13 +5,224 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ishwar Order System</title>
   <style>
-    /* Keep all your existing styles */
+    body {
+      font-family: Calibri, sans-serif;
+      font-size: 14px;
+      margin: 0;
+      padding: 0;
+      background-color: #f4f4f9;
+    }
+
+    header {
+      position: fixed;
+      top: 0;
+      width: 100%;
+      display: flex;
+      align-items: center;
+      padding: 10px;
+      background-color: #007bff;
+      color: white;
+      font-size: 1.5rem;
+      z-index: 1000;
+    }
+
+    .header-buttons {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
+
+    .header-buttons button {
+      background-color: #28a745;
+      color: white;
+      border: none;
+      padding: 10px;
+      cursor: pointer;
+      font-size: 1rem;
+    }
+
+    .header-buttons button:last-child {
+      background-color: #ff5733;
+    }
+
+    .container {
+      padding: 15px;
+      margin-top: 60px;
+    }
+
+    .search-bar {
+      width: 100%;
+      padding: 12px;
+      margin-bottom: 15px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      font-size: 1rem;
+      position: -webkit-sticky;
+      position: sticky;
+      top: 60px;
+      background-color: #f4f4f9;
+      z-index: 1000;
+    }
+
+    .item {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      align-items: flex-start;
+      padding: 12px;
+      border-radius: 5px;
+      margin-bottom: 15px;
+      background-color: #fff;
+      cursor: pointer;
+    }
+
+    .item:nth-child(even) {
+      background-color: #e9f5ff;
+    }
+
+    .item-details {
+      flex: 1;
+      margin-bottom: 10px;
+    }
+
+    .highlight {
+      color: #ff5733;
+      font-weight: bold;
+    }
+
+    .color-pts {
+      color: red;
+    }
+
+    .modal, .cart-modal {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.5);
+      justify-content: center;
+      align-items: center;
+    }
+
+    .modal-content, .cart-modal-content {
+      background: white;
+      padding: 20px;
+      border-radius: 10px;
+      width: 95%;
+      max-width: 400px;
+      max-height: 80%;
+      overflow-y: auto;
+    }
+
+    .modal-content label, .cart-modal-content label {
+      display: block;
+      margin-top: 10px;
+    }
+
+    .modal-content input, .cart-modal-content input {
+      width: 100%;
+      padding: 8px;
+      font-size: 1rem;
+      margin-top: 5px;
+    }
+
+    .modal-content input.narrow, .cart-modal-content input.narrow {
+      width: 6ch;
+    }
+
+    .radio-group {
+      display: flex;
+      flex-direction: column; /* Arrange options in columns */
+      align-items: flex-start;
+      margin-top: 10px;
+    }
+
+    .radio-group-inner {
+      display: flex;
+      justify-content: space-between;
+      width: 100%;
+      margin-bottom: 5px;
+    }
+
+    .radio-group-inner label {
+      display: flex;
+      align-items: center;
+    }
+
+    .buttons {
+      display: flex;
+      justify-content: center;
+      gap: 10px;
+      margin-top: 10px;
+    }
+
+    .button-text {
+      font-size: 1rem;
+      color: blue;
+      font-weight: bold;
+      cursor: pointer;
+      border: none;
+      background: yellow;
+      padding: 10px;
+      border-radius: 50%;
+    }
+
+    .form-group {
+      margin-bottom: 15px;
+    }
+
+    .form-group label {
+      font-weight: bold;
+      display: block;
+    }
+
+    .form-group input {
+      width: calc(100% - 10px);
+      padding: 8px;
+      font-size: 1rem;
+      margin-top: 5px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+    }
+
+    @media (max-width: 600px) {
+      header {
+        font-size: 1.2rem;
+      }
+
+      .container {
+        padding: 10px;
+      }
+
+      .search-bar {
+        padding: 10px;
+        font-size: 0.9rem;
+      }
+
+      .item {
+        padding: 10px;
+      }
+
+      .modal-content, .cart-modal-content {
+        width: 90%;
+      }
+
+      .modal-content input, .cart-modal-content input {
+        padding: 6px;
+        font-size: 0.9rem;
+      }
+
+      table {
+        font-size: 0.9rem;
+      }
+    }
   </style>
 </head>
 <body>
   <header>
     <div class="header-buttons">
-      <input type="file" id="upload-stock" accept=".xlsx" onchange="handleFileUpload(event)">
       <button onclick="newOrder()">New Order</button>
       Ishwar Order System
       <button onclick="viewCart()">Cart</button>
@@ -28,7 +239,7 @@
       <div id="selected-item-details"></div>
       <label for="order-qty">Order Quantity:</label>
       <input type="number" id="order-qty" class="narrow" placeholder="000000" inputmode="numeric">
-
+      
       <div class="radio-group">
         <div class="radio-group-inner">
           <label><input type="radio" name="unit" value="strips"> Strips</label>
@@ -67,27 +278,17 @@
     </div>
   </div>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
   <script>
     let data = [];
     let cart = [];
 
-    // Handle file upload
-    function handleFileUpload(event) {
-      const file = event.target.files[0];
-      const reader = new FileReader();
-
-      reader.onload = function (e) {
-        const data = new Uint8Array(e.target.result);
-        const workbook = XLSX.read(data, { type: 'array' });
-        const firstSheet = workbook.Sheets[workbook.SheetNames[0]];
-        const jsonData = XLSX.utils.sheet_to_json(firstSheet);
-
-        displayItems(jsonData);
-      };
-
-      reader.readAsArrayBuffer(file);
-    }
+    // Fetch data from JSON (you'll need to convert your Excel file to JSON)
+    fetch('data.json')
+      .then(response => response.json())
+      .then(json => {
+        data = json;
+        displayItems(json);
+      });
 
     // Display items
     function displayItems(items) {
@@ -99,19 +300,32 @@
         div.innerHTML = `
           <div class="item-details">
             <strong>${item['Product Name']}</strong><br>
-            <span>${item['Pack']}, ${item['Box']}, Shipper: ${item['Shipper']}</span>
+            <span>Stock: ${item['Current Stock']}</span><br>
+            <span>M.R.P.: ₹${parseFloat(item['M.R.P.']).toFixed(2)}</span><br>
+            <span>Sales Price: ₹${parseFloat(item['Sales Price']).toFixed(2)}</span><br>
+            <span>Company: ${item['Company']}</span>
           </div>
         `;
-        div.addEventListener('click', () => selectItem(item));
+              div.addEventListener('click', () => selectItem(item['Sl']));
         itemList.appendChild(div);
       });
     }
 
+    // Search functionality
+    document.getElementById('search').addEventListener('input', function() {
+      const query = this.value.toLowerCase();
+      const filteredData = data.filter(item =>
+        item['Product Name'].toLowerCase().includes(query)
+      );
+      displayItems(filteredData);
+    });
+
     // Select item
-    function selectItem(item) {
+    function selectItem(sl) {
+      const item = data.find(i => i['Sl'] === sl);
       document.getElementById('selected-item-details').innerHTML = `
         <strong>${item['Product Name']}</strong><br>
-        <span>${item['Pack']}, ${item['Box']}, Shipper: ${item['Shipper']}</span>
+        <span>Pack: ${item['Pack']}</span> <span>Box: ${item['Box']}</span> <span>Shipper: ${item['Shipper']}</span>
       `;
       document.getElementById('order-qty').value = '';
       document.getElementById('special-rate').value = '';
@@ -119,7 +333,79 @@
       document.getElementById('modal').style.display = 'flex';
     }
 
-    // Rest of the script remains as-is...
+    // Add to cart
+    function addToCart() {
+      const qty = parseFloat(document.getElementById('order-qty').value) || 0;
+      const rate = parseFloat(document.getElementById('special-rate').value) || 0;
+      const unit = document.querySelector('input[name="unit"]:checked').value;
+      const itemDetails = document.getElementById('selected-item-details').innerHTML;
+      cart.push({ itemDetails, qty, rate, unit });
+      closeModal();
+    }
+
+    // Close modal
+    function closeModal() {
+      document.getElementById('modal').style.display = 'none';
+    }
+
+    // View cart
+    function viewCart() {
+      const cartItems = document.getElementById('cart-items');
+      cartItems.innerHTML = '';
+      cart.forEach((item, index) => {
+        const { itemDetails, qty, rate, unit } = item;
+        const rateDisplay = rate ? `, Special Rate: ₹${rate.toFixed(2)}` : '';
+        const div = document.createElement('div');
+        div.className = 'cart-item';
+        div.innerHTML = `
+          <div class="cart-item-details">
+            ${index + 1}. ${itemDetails} - <span class="qty">Qty: ${qty}</span> <span class="unit">${unit}</span>${rateDisplay}
+          </div>
+        `;
+        cartItems.appendChild(div);
+      });
+      document.getElementById('cart-modal').style.display = 'flex';
+    }
+
+    // Close cart
+    function closeCart() {
+      document.getElementById('cart-modal').style.display = 'none';
+    }
+
+    // New order
+    function newOrder() {
+      cart = [];
+      document.getElementById('stockist-name').value = '';
+      document.getElementById('salesman-name').value = '';
+      closeCart();
+      alert("New order started. Cart cleared.");
+    }
+
+    // Export to PDF
+    function exportToPDF() {
+      const stockistName = document.getElementById('stockist-name').value;
+      const salesmanName = document.getElementById('salesman-name').value;
+      const cartContent = document.getElementById('cart-items').innerHTML;
+      const win = window.open('', '', 'height=700,width=700');
+      win.document.write('<html><head><title>Order Summary</title>');
+      win.document.write('</head><body>');
+      win.document.write('<h3>Order Summary (' + formatDate(new Date()) + ')</h3>');
+      win.document.write('<p><strong>Stockist Name:</strong> ' + stockistName + '</p>');
+      win.document.write('<p><strong>Salesman Name:</strong> ' + salesmanName + '</p>');
+      win.document.write(cartContent);
+      win.document.write('</body></html>');
+      win.document.close();
+      win.print();
+    }
+
+    // Format date to Indian format
+    function formatDate(date) {
+      const options = { day: '2-digit', month: 'long', year: 'numeric' };
+      return date.toLocaleDateString('en-IN', options);
+    }
+
+    // Initialize today's date in Indian format
+    document.querySelector('.cart-modal h3').innerHTML = `Order Summary (${formatDate(new Date())})`;
 
   </script>
 </body>
