--- a/index.html
+++ b/index.html
@@ -285,16 +285,22 @@
 
     // Fetch data from the local XLSX file
     fetch('data.xlsx')
-      .then(response => response.arrayBuffer())
+      .then(response => {
+        if (!response.ok) {
+          throw new Error(`Network response was not ok: ${response.statusText}`);
+        }
+        return response.arrayBuffer();
+      })
       .then(data => {
-        const workbook = XLSX.read(data, { type: 'array' });
+        const workbook = XLSX.read(new Uint8Array(data), { type: 'array' });
         const sheetName = workbook.SheetNames[0];
         const sheet = workbook.Sheets[sheetName];
         const json = XLSX.utils.sheet_to_json(sheet);
         displayItems(json);
-      });
+      })
+      .catch(error => console.error('Error fetching or parsing the Excel file:', error));
 
-    // Display items
+      // Display items
     function displayItems(items) {
       data = items; // Store the items in the global data variable
       const itemList = document.getElementById('item-list');
@@ -407,6 +413,7 @@
       const options = { day: '2-digit', month: 'long', year: 'numeric' };
       return date.toLocaleDateString('en-IN', options);
     }
+
   </script>
 </body>
 </html>
