--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
     .radio-group {
       display: flex;
-      flex-direction: column; /* Arrange options in columns */
+      flex-direction: column;
       align-items: flex-start;
       margin-top: 10px;
     }
@@ -303,7 +303,7 @@
     let cart = [];
 
     // Fetch data from the local XLSX file
-    fetch('data.xlsx')
+     fetch('data.xlsx')
       .then(response => {
         if (!response.ok) {
           throw new Error(`Network response was not ok: ${response.statusText}`);
@@ -313,7 +313,7 @@
       .then(data => {
         const workbook = XLSX.read(new Uint8Array(data), { type: 'array' });
         const sheetName = workbook.SheetNames[0];
-             const sheet = workbook.Sheets[sheetName];
+        const sheet = workbook.Sheets[sheetName];
         const json = XLSX.utils.sheet_to_json(sheet);
         displayItems(json);
       })
@@ -438,6 +438,7 @@
       const options = { day: '2-digit', month: 'long', year: 'numeric' };
       return date.toLocaleDateString('en-IN', options);
     }
+
   </script>
 </body>
 </html>
